gccida/c1/get_varargs_alias_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_varargs_alias_set/src/alias.c:1172:6: error: use of undeclared identifier 'get_varargs_alias_set_set'; did you mean 'get_varargs_alias_set'?
if ( get_varargs_alias_set_set == -1 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     get_varargs_alias_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_varargs_alias_set/src/alias.c:1170:10: note: 'get_varargs_alias_set' declared here
__int64  get_varargs_alias_set( ) 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_varargs_alias_set/src/alias.c:1173:1: error: use of undeclared identifier 'get_varargs_alias_set_set'
get_varargs_alias_set_set = new_alias_set( ); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_varargs_alias_set/src/alias.c:1174:8: error: use of undeclared identifier 'get_varargs_alias_set_set'; did you mean 'get_varargs_alias_set'?
return get_varargs_alias_set_set; 
       ^~~~~~~~~~~~~~~~~~~~~~~~~
       get_varargs_alias_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_varargs_alias_set/src/alias.c:1170:10: note: 'get_varargs_alias_set' declared here
__int64  get_varargs_alias_set( ) 
         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_varargs_alias_set/src/obj/alias.o] Error 1
